--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
     hooks:
       - id: black
         language_version: python3
+        args: ["--line-length=79"]
 
   - repo: https://github.com/PyCQA/flake8
     rev: 3.9.2
